--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p id="summary"></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
